EECORE-1909 Fix filter clear alignment
This is for filter clear icons outside of the Entries filter bar.

--- a/cp-styles/app/styles/components/_grid-field.scss
+++ b/cp-styles/app/styles/components/_grid-field.scss
@@ -3,7 +3,7 @@
 	width: 100%;
 
 	.table-responsive {
-		box-shadow: none;
+		@include shadow-input;
 		border: 1px solid color(border);
 		// overflow-x: visible;
 	}
@@ -75,7 +75,7 @@
     padding-right: 15px;
     border-right: none;
   }
-  
+
 
   .file-field__dropzone {
     margin-top: 0px;
